# parse-git-url

./: .gitignore  Cargo.toml  README.md  cliff.toml  flake.nix
.github/: release.yml  renovate.json
.github/workflows/: ci.yml  release.yml
examples/: multi.rs  readme.rs  trim_auth.rs
src/: lib.rs  scheme.rs
tests/: normalize.rs  parse.rs  trim_auth.rs
