[package]
name = "parse-git-url"
version = "0.4.4"
edition = "2021"
authors = [
  "T.J. Telan <t.telan@gmail.com>",
  "Eric Crosson <eric.s.crosson@utexas.edu>"
]
license = "MIT"
description = "A parser for git repo urls based on url crate"
readme = "README.md"
homepage = "https://github.com/EricCrosson/parse-git-url"
repository = "https://github.com/EricCrosson/parse-git-url"
keywords = ["parse", "git", "url"]
categories = ["parser-implementations", "encoding"]
documentation = "https://docs.rs/parse-git-url"
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/.releaserc.json",
  "/CHANGELOG.md",
  "/flake.{lock,nix}",
  "/package{,-lock}.json",
  "/node_modules"
]

[lib]
name = "git_url_parse"
path = "src/lib.rs"


[dependencies]
tracing = "0.1"
url = "^2.2"

[dev-dependencies]
env_logger = "^0.10.0"
